@@ -1,38 +1,40 @@
 package com.auth.wow.libre.application.services.product;
 
 import com.auth.wow.libre.domain.model.Product;
+import com.auth.wow.libre.domain.model.ProductCategory;
 import com.auth.wow.libre.domain.ports.in.product.ProductPort;
-import com.auth.wow.libre.domain.ports.out.product.LoadProductPort;
+import com.auth.wow.libre.domain.ports.out.product.ObtainProductPort;
 import com.auth.wow.libre.infrastructure.entities.ProductEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductService implements ProductPort {
 
-  private final LoadProductPort loadProductPort;
+    private final ObtainProductPort obtainProductPort;
 
-  public ProductService(LoadProductPort loadProductPort) {
-    this.loadProductPort = loadProductPort;
-  }
+    public ProductService(ObtainProductPort obtainProductPort) {
+        this.obtainProductPort = obtainProductPort;
+    }
 
-  @Override
-  public List<Product> getProducts(String transactionId) {
-    return loadProductPort.findAll(transactionId).stream().map(this::mapProductEntityToProduct).collect(Collectors.toList());
-  }
+    @Override
+    public List<ProductCategory> getProducts(String transactionId) {
+        List<Product> products = obtainProductPort.findAll(transactionId).stream().map(this::mapProductEntityToProduct).toList();
+        return null;
+    }
 
-  private Product mapProductEntityToProduct(ProductEntity productEntity) {
-    return new Product(
-        productEntity.getId(),
-        productEntity.getName(),
-        productEntity.getDescription(),
-        productEntity.getImage(),
-        productEntity.getPrice(),
-        productEntity.getDiscount(),
-        productEntity.getReferenceNumber(),
-        productEntity.getItemCode()
-    );
-  }
+    private Product mapProductEntityToProduct(ProductEntity productEntity) {
+        return new Product(
+                productEntity.getId(),
+                productEntity.getName(),
+                productEntity.getDescription(),
+                productEntity.getImage(),
+                productEntity.getPrice(),
+                productEntity.getDiscount(),
+                productEntity.getReferenceNumber(),
+                productEntity.getItemCode(),
+                productEntity.getCategory()
+        );
+    }
 }
